--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html, body {
     box-sizing: border-box;
 }
 
+h1 {
+
+}
+
 #wrapper {
     height: 100%;
     width: 100%;
@@ -29,6 +33,10 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-height: 1000px) {
@@ -49,8 +57,52 @@ html, body {
     }
 }
 
-h1 {
+#alice-container {
+    height: 100vh;
+    width: 100vw;
+    /* position: relative  ;
+    top: 30%; */
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    object-fit: contain;
+}
 
+#alice-s {
+    height: 30vh;
+    width: 80vw;
+    background-image: url("img/alice-s.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    box-sizing: border-box;
+    object-fit: contain;
+    position: relative;
+    top: 100px;
+}
+
+#alice-m {
+    height: 50vh;
+    width: 80vw;
+    background-image: url("img/alice-m.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    box-sizing: border-box;
+    object-fit: contain;
+}
+
+#alice-l {
+    height: 80vh;
+    width: 80vw;
+    background-image: url("img/alice-l.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    box-sizing: border-box;
+    object-fit: contain;
 }
 
 #bar {
@@ -59,7 +111,7 @@ h1 {
     background-color: black;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -70,6 +122,7 @@ h1 {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    margin: 0 20px;
 }
 
 .drinks {
@@ -79,11 +132,3 @@ h1 {
     box-sizing: border-box;
     object-fit: contain;
 }
-
-#drink-pink {
-
-}
-
-/* #drink-blue {
-    grid-area: bar-r;
-} */
